Fixed header and footer alignment

--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -27,7 +27,6 @@
 .contact-page {
   color: white;
   text-align: center;
-  margin-top: -140px;
   width: 670px;
   animation: slide-up 1s ease-out forwards;
 }
